2010-08-06  Juanma Barranquero  <lekktu@gmail.com>

	Fix changes in revnos 100982..100984 for Windows build.

	* xmenu.c [USE_X_TOOLKIT || USE_GTK]:
	Don't declare xmalloc_widget_value and digest_single_submenu.

	* w32font.c (Qlatin): Remove declaration.

	* menu.h (xmalloc_widget_value, digest_single_submenu): Declare.

	* dired.c (compile_pattern):
	* syssignal.h (signal_handler_t): Restore declarations.

2010-08-05  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove extern declarations in .c files, .h files have them.
	* data.c:
	* dired.c:
	* editfns.c:
	* filelock.c:
	* fns.c:
	* font.c:
	* fontset.c:
	* frame.c:
	* fringe.c:
	* ftfont.c:
	* gtkutil.c:
	* indent.c:
	* keyboard.c:
	* keymap.c:
	* lread.c:
	* menu.c:
	* print.c:
	* search.c:
	* sound.c:
	* window.c:
	* xdisp.c:
	* xfaces.c:
	* xfns.c:
	* xfont.c:
	* xftfont.c:
	* xmenu.c:
	* xterm.c: Remove declarations.

	Cleanup syssignal.h.
	* syssignal.h (sighold, sigrelse, RETSIGTYPE): Remove, unused.
	(main_thread): Move down to remove #ifdef.
	(SIGMASKTYPE, SIGEMPTYMASK, SIGFULLMASK, sigmask, sigunblock):
	Remove conditional definition following unconditional ones.

	* lisp.h: Remove HAVE_SHM code, unused.
	(QCmap, QCrehash_size, QCrehash_threshold, QCsize, QCtest)
	(QCweakness, Qabove_handle, Qbackquote, Qbar, Qbelow_handle)
	(Qborder, Qbottom, Qbox, Qcircular_list, Qcomma, Qcomma_at)
	(Qcomma_dot, Qcursor, Qdefault, Qdown, Qend_scroll, Qeq, Qeql)
	(Qequal, Qfile_exists_p, Qfont_param, Qfringe, Qfunction)
	(Qfunction_documentation, Qhandle, Qhbar, Qheader_line, Qhollow)
	(Qidentity, Qleft_margin, Qmenu, Qmenu_bar_update_hook)
	(Qmode_line_inactive, Qmouse, Qoverriding_local_map)
	(Qoverriding_terminal_local_map, Qratio, Qregion, Qright_margin)
	(Qscroll_bar, Qtool_bar, Qtop, Qup, Qvertical_border, Qwhen)
	(Qwindow_scroll_functions, Vafter_load_alist)
	(Vauto_save_list_file_name, Vface_alternative_font_family_alist)
	(Vface_alternative_font_registry_alist, Vface_font_rescale_alist)