@@ -1,3 +1,9 @@
+2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* process.c: Remove HAVE_SOCKETS #ifdefs inside #ifdef
+	subprocesses, only MSDOS does not define HAVE_SOCKETS.
+	(socket_options): Use const char* for name.
+
 2010-08-06  Juanma Barranquero  <lekktu@gmail.com>
 
 	Fix changes in revnos 100982..100984 for Windows build.
